--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#ffffff" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nick Johnson Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
